--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <script src="script.js" defer></script>
 
     <title>
       Frontend Mentor | Newsletter sign-up form with success message
@@ -88,7 +89,8 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Nathalia Irokawa</a>.
+        >. Coded by
+        <a href="https://github.com/nathaliaif">Nathalia Irokawa</a>.
       </footer>
     </section>
   </body>
