Ajustado path das imagens

--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
         </div>
         <div class="main-image">
           <img
-            src="/assets/images/illustration-sign-up-mobile.svg"
+            src="./assets/images/illustration-sign-up-mobile.svg"
             alt="Illustration of a computer screen"
             class="mobile-image"
           />
           <img
-            src="/assets/images/illustration-sign-up-desktop.svg"
+            src="./assets/images/illustration-sign-up-desktop.svg"
             alt="Illustration of a computer screen"
             class="desktop-image"
           />
