Adicionado efeito gradient em hover do botão

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               placeholder="email@company.com"
             />
             <button class="dark-button" id="subscribe-button">
-              Subscribe to monthly newsletter
+              <span class="button-text">Subscribe to monthly newsletter</span>
             </button>
           </div>
         </div>
@@ -87,7 +87,9 @@
             the button inside to confirm your subscription.
           </p>
         </div>
-        <button class="dark-button" id="dismiss-button">Dismiss message</button>
+        <button class="dark-button" id="dismiss-button">
+          <span class="button-text">Dismiss message</span>
+        </button>
       </section>
 
       <footer class="attribution">
